- Project & Gradle Setup
Added Dependencies for
• Jetpack Compose BOM + UI, Material3, Navigation
• Hilt (hilt-android, hilt-compiler, hilt-navigation-compose)
• Firebase BOM + Realtime Database + Storage + Coroutines adapter
• WorkManager (work-runtime-ktx + hilt-work)
• DataStore Preferences
• Coroutines (kotlinx-coroutines-android)
• Coil for image loading (coil-compose)
• Kotlin Serialization plugin

Added configure for
• compileSdk / targetSdk / minSdk values
• Enable Compose build feature and set kotlinCompilerExtensionVersion
• Add google-services plugin to app build.gradle
• Set up .gitignore for google-services.json and keystore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,50 @@
-# Gradle files
-.gradle/
-build/
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Log/OS Files
-*.log
-
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.aab
-*.apk
-output-metadata.json
-
-# IntelliJ
+# ── Android ───────────────────────────────────────────────────────────────────
 *.iml
-.idea/
-misc.xml
-deploymentTargetDropDown.xml
-render.experimental.xml
+.gradle/
+local.properties
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+*.apk
+*.aab
+*.ap_
 
-# Keystore files
-*.jks
-*.keystore
+# ── Android Studio ────────────────────────────────────────────────────────────
+/.idea/
+*.iws
+*.ipr
 
-# Google Services (e.g. APIs or Firebase)
+# ── SECURITY — Never commit these ─────────────────────────────────────────────
+# Firebase — contains API keys and project config
 google-services.json
 
-# Android Profiling
-*.hprof
+# Signing keystores
+*.jks
+*.keystore
+keystore.properties
+release.keystore
+debug.keystore
+
+# Environment / secrets files
+*.env
+secrets.properties
+local.defaults.properties
+
+# ── Build outputs ─────────────────────────────────────────────────────────────
+app/build/
+**/build/
+
+# ── Kotlin ────────────────────────────────────────────────────────────────────
+*.class
+
+# ── Gradle ────────────────────────────────────────────────────────────────────
+.gradle
+gradle-app.setting
+!gradle-wrapper.jar
+!gradle-wrapper.properties
+
+# ── macOS ─────────────────────────────────────────────────────────────────────
+.AppleDouble
+.LSOverride
