--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ gradle-app.setting
 # ── macOS ─────────────────────────────────────────────────────────────────────
 .AppleDouble
 .LSOverride
+/.kotlin/sessions
