CHAT-007:Theme & Design Tokens
• Created Color.kt with the full color palette (light + dark variants)
• Created Theme.kt with MaterialTheme wrapping lightColorScheme / darkColorScheme
• Created Typography.kt with custom font styles if needed (or default M3 type scale)
• Created Shape.kt with rounded corner values for bubbles, cards, inputs
• Applied dynamic color support for Android 12+ (dynamicDarkColorScheme / dynamicLightColorScheme)
• Defined custom design tokens as Compose CompositionLocals if needed (e.g., message bubble colors per user)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,6 +45,8 @@ turbine = "1.2.0"
 mockk = "1.13.13"
 coroutinesTest = "1.10.1"
 
+accompanist = "0.36.0"
+
 [libraries]
 # ── Compose ──────────────────────────────────────────────────────────────────
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
@@ -93,6 +95,10 @@ coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coi
 
 # ── Serialization ─────────────────────────────────────────────────────────────
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
+
+# ── System UI Controller ─────────────────────────────────────────────────────────────
+accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "accompanist" }
+
 
 # ── Testing ───────────────────────────────────────────────────────────────────
 junit = { group = "junit", name = "junit", version.ref = "junit" }
