Add Firebase Auth, Google Sign-In & profile
Introduce end-to-end authentication and profile plumbing:
- Add AuthRepository and FirebaseAuthRepository to handle email/password, Google sign-in, password reset, sign-out, and an auth state Flow.
- Add AuthUser domain model (with suggestedUsername) and AuthRepository interface.
- Update UserRepository API and UserEntity to support per-user profiles (uid-keyed DataStore keys, email, photoUrl) and implement hasProfile/save/get/observe/clear profile operations.
- Added GoogleSignInHelper using Android Credential Manager to obtain Google ID tokens and wire Google sign-in flow in AuthViewModel.
- Add Auth UI: AuthScreen, AuthUiState, and AuthViewModel with validation, effects, and routing decisions (username onboarding vs chat).
- Update DI: provide FirebaseAuth in FirebaseModule and bind FirebaseAuthRepository in RepositoryModule.
- Update navigation to include Auth and Username flows and pass suggested name arg; tweak transitions.
- Add credential and Google ID dependencies to build.gradle.kts. These changes separate authentication (identity) from local profile (display name) and integrate Google sign-in via Credential Manager.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,9 @@ hiltNavigation = "1.2.0"
 firebaseBom = "33.7.0"
 firebaseCoroutines = "1.10.1"
 googleServices = "4.4.2"
+firebaseAuth        = "23.1.0"
+credentialManager   = "1.3.0"
+googleIdentity      = "1.1.1"
 
 # WorkManager
 workManager = "2.10.0"
@@ -46,6 +49,7 @@ mockk = "1.13.13"
 coroutinesTest = "1.10.1"
 
 accompanist = "0.36.0"
+googleid = "1.2.0"
 
 [libraries]
 # ── Compose ──────────────────────────────────────────────────────────────────
@@ -78,6 +82,13 @@ firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.r
 firebase-database = { group = "com.google.firebase", name = "firebase-database-ktx" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage-ktx" }
 firebase-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version.ref = "firebaseCoroutines" }
+firebase-auth           = { group = "com.google.firebase", name = "firebase-auth-ktx" }
+
+# ── Credential Manager (Google Sign-In) ───────────────────────────────────────
+credentials                    = { group = "androidx.credentials", name = "credentials",                    version.ref = "credentialManager" }
+credentials-play-services-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentialManager" }
+googleid                       = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleIdentity" }
+
 
 # ── WorkManager ───────────────────────────────────────────────────────────────
 work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workManager" }
@@ -107,6 +118,7 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk" }
+google-googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -138,6 +150,7 @@ hilt = [
     "hilt-work",
 ]
 firebase = [
+    "firebase-auth",
     "firebase-database",
     "firebase-storage",
     "firebase-coroutines",
