CHAT-068:Support video thumbnails with Coil
- Add coil-video dependency and extract video frames for thumbnails.
- Update MediaMessageContent.kt and MediaPreviewRow.kt to detect video files (by extension), use VideoFrameDecoder.Factory and videoFrameMillis(1000) to load a frame, and overlay a play icon for videos. Also improve loading/error UI for media thumbnails.
- Changes: add implementation(libs.coil.video) and coil-video entry in libs.versions.toml, plus UI and import updates to render video previews.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -103,6 +103,7 @@ coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-
 
 # ── Coil ─────────────────────────────────────────────────────────────────────
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+coil-video = { group = "io.coil-kt", name = "coil-video", version.ref = "coil" }
 
 # ── Serialization ─────────────────────────────────────────────────────────────
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
