Add tests and expand test dependencies
- Add comprehensive unit and Compose UI tests for messaging features and workers, including SendMessage/Retry/Delete/Load/Observe use case tests, Compose UI tests for chat components, and WorkData utils tests.
- Update app/build.gradle.kts to adjust packaging excludes and add a suite of test dependencies (JUnit4, kotlinx-coroutines-test, MockK, Turbine, Robolectric, DataStore, WorkManager testing, Compose UI test artifacts, Hilt testing, and AndroidX test libraries).
- update gradle/libs.versions.toml and modify existing SendMessageWorkerTest accordingly to align with the new test setup.
These changes enable robust JVM and instrumented testing across domain, worker, and UI layers.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -52,6 +52,7 @@ accompanist = "0.36.0"
 googleid = "1.2.0"
 junitKtx = "1.3.0"
 workTesting = "2.11.1"
+uiTestJunit4 = "1.10.3"
 
 [libraries]
 # ── Compose ──────────────────────────────────────────────────────────────────
@@ -124,6 +125,7 @@ mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "moc
 google-googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
 junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "workTesting" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "uiTestJunit4" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
